[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/retro_gaming/Retro Gaming.tres" type="DynamicFont" id=1]
[ext_resource path="res://Main/DialogScenes/DialogBox/DialogBox.gd" type="Script" id=2]

[node name="DialogBox" type="Control"]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.12549, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portraits" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_left = 4
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PortraitLeft" type="TextureRect" parent="Portraits"]
margin_left = 4.0
margin_right = 316.0
margin_bottom = 64.0
grow_vertical = 0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="PortraitRight" type="TextureRect" parent="Portraits"]
margin_left = 252.0
margin_right = 316.0
margin_bottom = 64.0
grow_vertical = 0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 8
stretch_mode = 5
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="DialogContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 80
custom_constants/margin_top = 4
custom_constants/margin_left = 80
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="RichTextLabel" parent="DialogContainer"]
margin_left = 80.0
margin_top = 17.0
margin_right = 240.0
margin_bottom = 28.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="DialogTimer" type="Timer" parent="."]
wait_time = 0.125

[connection signal="gui_input" from="." to="." method="_on_DialogBox_gui_input"]
[connection signal="timeout" from="DialogTimer" to="." method="_on_DialogTimer_timeout"]
